var/httpd/htdocs/skins/Customer/default/css/FAQ.Customer.Detail.css
/**
 * @project     OTRS (http://www.otrs.org) - Agent Frontend
 * @version     $Revision: 1.12 $
 * @copyright   OTRS AG
 * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
 */

/**
 * @package     Skin "Default"
 * @section     FAQDetails
 */

@media screen,projection,tv,handheld {

.ArticleFAQContent {
    padding: 11px 12px;
    line-height: 1.3;
}

.ArticleFAQContent .message ol {
    list-style: decimal;
    padding-left: 40px;
    margin-bottom: 12px;
    margin-top: 12px;
}

.ArticleFAQContent .message ul {
    list-style: disc;
    padding-left: 40px;
    margin-bottom: 12px;
    margin-top: 12px;
}

.RateChecked {
    background: transparent url(../img/rate-button-checked.png) no-repeat scroll 0 0;
    display: block;
    height: 16px;
    margin-right: 2px;
    cursor: pointer;
    float: left;
    padding-top: 15px;
    padding-left: 4px;
    padding-right: 15px;
    color: #000000;

}

.RateUnChecked {
    background: transparent url(../img/rate-button-unchecked.png) no-repeat scroll 0 0;
    display: block;
    height: 16px;
    margin-right: 2px;
    cursor: pointer;
    float: left;
    padding-top: 15px;
    padding-left: 4px;
    padding-right: 15px;
    color: #000000;

}

.RateStar {
    background: transparent url(../img/rate-indicator.png) no-repeat scroll 0 0;
    display: block;
    height: 16px;
    cursor: pointer;
    text-indent: -9999px;
    float: left;
    padding-left: 6px;
    padding-right: 6px;
    margin-top: 2px;
}

.RateStarText {
    text-indent:5px;
    float: left;

}

.RateLabelBefore {
    float: left;
    padding-right: 15px;
    margin-left: 10px;
    color: Gray;
}

.RateLabelAfter {
    float: left;
    margin-left: 5px;
    margin-right: 25px;
    color: Gray;
}

.RatingLabel {
    float: left;
}

.SpacingTop {
    margin-top: 13px;
}

.SpacingTopLarge {
    margin-top: 26px;
}

.VotingQuestion {
    margin-left: 10px;
    margin-right:10px;
    color: #000000;
}

.VotingBox {
    min-width: 20pc;
    margin: 0 30px 21px;
    color: #6A6A6A;
    background: #F0F0F0;
    background: -moz-linear-gradient(top, #F9F9F9, #F0F0F0);
    background: -webkit-gradient(linear, left top, left bottom, from(#F9F9F9), to(#F0F0F0));
    border-left: 1px solid #D6D6D6;
    border-right: 1px solid #D6D6D6;
    -webkit-border-bottom-right-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    -moz-border-radius-bottomright: 5px;
    -moz-border-radius-bottomleft: 5px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    display: inline-block;
    position: relative;
    border-bottom: 1px solid #D6D6D6;
}

.VotingBox > #Messenger {
    height: auto;
    border-top: 1px solid #EEE;
}

.RSSIcon {
    background: url(../img/rss.png) no-repeat;
    float: right;
    text-indent: -9999px;
    height: 16px;
    width: 28px;
}

}

